@@ -1,3 +1,9 @@
+2007-07-31  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-desktop.c: (wp_file_open_dialog), (desktop_init):
+	* appearance.h: add a shortcut to the user's special Pictures folder to
+	the file chooser and default to it (bug #461093), and reduce casting
+
 2007-07-30  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-style.c: (color_button_clicked_cb): fix cut'n'paste errors
